Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: spring-chat-service
          servicePort: 80
      - path: /login
        backend:
          serviceName: spring-login-service
          servicePort: 80
      - path: /profile
        backend:
          serviceName: spring-profile-service
          servicePort: 80
